--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.10.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.5.0",
     "node-fetch": "^2.7.0"
